# compose-go

./: .gitignore  .releaserc.json  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: main.yaml  release.yaml
conda/: env.yaml
scripts/: binary.py  binary.sh  update_binary.sh  versioning.sh
src/: __init__.py
src/compose/: __init__.py
tests/: docker-compose.yaml
