[project]
name = "compose-go"
version = "v2.36.0"  # docker-compose version
description = "Docker Compose v2 (GoLang) wrapped in a Python Package"
authors = [
  { name = "Luã Bida Vacaro", email = "luabidaa@gmail.com"},
  { name = "Ivan Ogasawara", email = "ivan.ogasawara@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.9,<4"

[tool.poetry]
packages = [
  {include = "compose", from = "src"}
]
include = [
  "src/compose/docker-compose",
  "scripts/"
]

[tool.poetry.scripts]
docker-compose = "compose:docker_compose"

[tool.poetry.dependencies]
python = ">=3.9,<4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.build]
script = "scripts/binary.py"
generate-setup-file = false
